corrected header and horizontal scroll of page

--- a/pages/index.css
+++ b/pages/index.css
@@ -17,7 +17,7 @@
 }
 
 .header {
-    max-width: calc(100% - 400px);
+    max-width: 880px;
     padding: 45px 0 41px;
     margin: 0 auto;
     box-sizing: border-box;
@@ -41,7 +41,11 @@
     padding-top: 40px;
     margin: 0 auto;
     display: flex;
-    position: relative;
+    justify-content: space-between;
+}
+
+.profile__data {
+    display: flex;
 }
 
 .profile__avatar {
@@ -83,8 +87,10 @@
 }
 
 .profile__edit-button {
-    max-width: 24px;
-    background-color: #000;
+    border: none;
+    min-width: 24px;
+    min-height: 24px;
+    background: url(../images/Edit_Button.png) transparent no-repeat;
     align-self: center;
     padding: 0;
     z-index: 150;
@@ -102,12 +108,12 @@
 }
 
 .add-button {
-    max-width: 150px;
-    position: absolute;
-    right: 0;
+    border: none;
+    min-width: 150px;
+    min-height: 50px;
+    background: url(../images/add_button.png) transparent no-repeat;
+    background-position: right;
     align-self: center;
-    background-color: #000;
-    padding: 0 0 0 244px;
     opacity: 1;
     transition: opacity 0.3s ease-in;
     -webkit-transition: opacity 0.3s ease-in;
@@ -120,6 +126,7 @@
 .add-button:hover {
     opacity: 0.6;
 }
+
 
 .popup {
     width: 100%;
